overall small changes
general cleanup, processing may not work at all embedded

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
     <head>
         <link rel="stylesheet" href="main.css">
-        <title>Contact Me</title>
+        <title>Find Me</title>
     </head>
 
     <body>
