--- a/projects.html
+++ b/projects.html
@@ -48,10 +48,12 @@ function getProcessingSketchId () { return 'hitmontopfinal'; }
         </p>
     
         <!--Hitmontop Animation-->
+        <!--Unfortunately, still not working. Likely a problem with Processing and web embedding.
+
 		<div id="content">
 			<div>
 				<canvas id="hitmontopfinal" data-processing-sources="hitmontopfinal.pde" 
-						width="1000" height="900">
+						width="300" height="200">
 					<p>Your browser does not support the canvas tag.</p>
 				</canvas>
 				<noscript>
@@ -65,6 +67,7 @@ function getProcessingSketchId () { return 'hitmontopfinal'; }
         <br>(Hint: Mouse wheel in both directions, along with left, middle, and right button click.)
         <br>Program used: Modeled in Blender, Animated in Processing</font>
         </p>
+        -->
         
         <script src="script.js"></script>
 	</body>
